resolved left side menu overlap issue with schedule tab panel

--- a/PracticeWeb.UI/Content/css/custom.css
+++ b/PracticeWeb.UI/Content/css/custom.css
@@ -186,6 +186,7 @@
 #people {
 	position: absolute;
 	left: 0;
+    z-index:1;
 }
 #alex {
 	position: absolute;
